tests/agl/rejections/type/ord_on_bool.agl
let x = (true < false)
x
